# SanoBlimpSoftware

./: Cargo.toml  README.md  SanoBlimpSoftware.sh  competition.service  config.toml
.github/workflows/: docs.yml
aux/: base_station.rs  mobile_recv.rs  pwm_rmp.py  pwm_rpm_wind_data.csv  recv.py  search_sim.rs
docs/: book.toml
docs/book/: 01_blimp_control___blimp__trait____flappy__implementation_.html  02_hardware_actuation___pcaactuator__.html  03_configuration___config__.html  04_object_detection___detection__.html  05_sensor_input_state__conceptual_.html  06_autonomous_control___autonomous__.html  07_image_processing___streaming.html  404.html  index.html  print.html  searchindex.js  searchindex.json
docs/scripts/: main.py  pyproject.toml
docs/scripts/media/Tex/: c6dffbbf7edaed18.tex
docs/scripts/media/videos/1080p60/partial_movie_files/CheckHealthDemo/: partial_movie_file_list.txt
docs/scripts/media/videos/main/1080p60/partial_movie_files/BlimpForces/: partial_movie_file_list.txt
docs/scripts/media/videos/main/1080p60/partial_movie_files/BlimpTeleopExplanation/: partial_movie_file_list.txt
docs/src/: 01_blimp_control___blimp__trait____flappy__implementation_.md  02_hardware_actuation___pcaactuator__.md  03_configuration___config__.md  04_object_detection___detection__.md  05_sensor_input_state__conceptual_.md  06_autonomous_control___autonomous__.md  07_image_processing___streaming.md  SUMMARY.md  getting_started.md  hardware.md  index.md  installation.md  introduction.md  usage.md
example/: bme.rs  bno055.rs  gatt_client.rs  rp_servo.rs  servo.rs  we2.rs
src/: main.rs
src/driver/: bme280.rs
src/lib/: actuators.rs  autonomous.rs  blimp.rs  mod.rs  object_detection.rs  sensors.rs
src/lib/base_station/: communication.rs
