[package]
name = "SanoBlimpSoftware"
version = "0.1.0"
edition = "2024"

[[bin]]
name="ble"
path="example/l2cap_client.rs"

[[bin]]
name="servo"
path="example/servo.rs"


[[bin]]
name="we2"
path="example/we2.rs"



[dependencies]
bluer = {version="0.17.3",features=["bluetoothd", "rfcomm"]}
bytes = "1.10.1"
env_logger = "0.11.7"
futures = "0.3.31"
futures-util = "0.3.31"
gilrs = "0.11.0"
linux-embedded-hal = "0.4.0"
pwm-pca9685 = "1.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version="1.44.0", features =["full"]}
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tokio-util = {version="0.7.14", features=["codec"]}

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libdbus-1-dev:$CROSS_DEB_ARCH pkg-config:$CROSS_DEB_ARCH libudev-dev:$CROSS_DEB_ARCH"
]
