[package]
name = "SanoBlimpSoftware"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gatt_client"
path = "example/gatt_client.rs"

[[bin]]
name = "servo"
path = "example/servo.rs"

[[bin]]
name = "bme"
path = "example/bme.rs"

[[bin]]
name = "bno"
path = "example/bno055.rs"


[[bin]]
name = "search_sim"
path = "aux/search_sim.rs"

[[bin]]
name = "rp_servo"
path = "example/rp_servo.rs"

[[bin]]
name = "mobile_recv"
path = "aux/mobile_recv.rs"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.97"
base64 = "0.22.1"
bluer = { version = "0.17.3", features = ["bluetoothd", "rfcomm"] }
bme280 = { version = "0.5.1", features = ["serde"], git = "https://github.com/VersBinarii/bme280-rs" }
bno055 = "0.4.0"
bytes = "1.10.1"
devices = "0.5.0"
env_logger = "0.11.7"
evdev = "0.13.0"
futures = "0.3.31"
futures-util = "0.3.31"
gilrs = "0.11.0"
image = {version="0.25.5", features=["jpeg"]}
imageproc = "0.25.0"
linux-embedded-hal = "0.4.0"
spidev = "0.6"              # Used internally by linux-embedded-hal
mint = "0.5.9"
pwm-pca9685 = "1.0.0"
rppal = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serialport = "4.7.0"
shared-bus = "0.3.1"
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec"] }
toml = "0.8.20"
uuid = "1.16.0"
rand = "0.9.0"
chrono = "0.4.40"
i2cdev = "0.6.1"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libdbus-1-dev:$CROSS_DEB_ARCH pkg-config:$CROSS_DEB_ARCH libudev-dev:$CROSS_DEB_ARCH",
]
